...
            firebaseAuthService.sendOtpToEmail(email)
                .addOnCompleteListener { task ->
                    viewModelScope.launch {
                        if (task.isSuccessful) {
                            if (email.isNotBlank() && email == signupEmail) {
                                viewStateFlow.value = viewStateFlow.value.copy(
                                    codeSentMessage = "OTP created successfully, please verify the code"
                                )
                            }
                        } else {
                            // Handle the case where OTP sending fails
                            viewStateFlow.value = viewStateFlow.value.copy(
                                verificationErrorMessage = "Failed to send verification code: ${task.exception?.message}"
...
        val emailErrorMessage = createEmailErrorMessage(email, signupEmail)
        viewStateFlow.value = viewStateFlow.value.copy(emailErrorMessage = emailErrorMessage)
    }

    private fun createEmailErrorMessage(email: String, signupEmail: String): String? {
        return if (email.isNotBlank() && email != signupEmail) {
            "Entered email doesn't match the signup email"
        } else {
            null
        }
    }
}
