...
) {
    Column(
        modifier = Modifier.fillMaxSize()
    ) {
        TopAppBar(title = { Text("Edit") }, navigationIcon = {
            IconButton(onClick = { onBackNavigate() }) {
                Icon(imageVector = Icons.Default.ArrowBack, contentDescription = "Back")
            }
        })
        Spacer(modifier = Modifier.height(16.dp))

        userProfiles.forEach { userProfile ->
            UserProfileItem(
...
